== 1/Jul/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b97.zip V1.6-b97]   [attachment:wiki:SoftwareReleases:eLife-1.6b97-libs.zip Libs-V1.6b97]  ==

Resolved error messages when adding duplicate ALARM devices for the Comfort configuration. [ticket:753]
The display_name that has been used with the device with key 00 is the display_name that flash should send arm messages too.

For example
{{{
        <ALARM KEY="00" DISPLAY_NAME="ALARM"/>
}}}                     
Resolves comfort alarm [ticket:695]

Added comfort zone name support, to be used the integrator must add an ALERT_ZONES parameter table, otherwise the zone number will be
reported.

For example
{{{
   <CATALOGUE NAME="ALERT_ZONES">
        <ITEM CODE="01" VALUE="Front Wall"/>
    </CATALOGUE>
    
    <PARAMETERS>
        <ITEM NAME="ALERT_ZONES" VALUE="ALERT_ZONES" />
    </PARAMETERS>
}}}


''' Serial '''

Resolved port not found error [ticket:752]

== 30/Jun/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b96.zip V1.6-b96]  ==

''' Jandy '''

Added Jandy support [ticket:481]

See ServerDocs/JandyModel for details.


== 12/Jun/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b95.zip V1.6-b95]  [attachment:wiki:SoftwareReleases:eLife-1.6b95-libs.zip Libs-V1.6b95] ==

''' Comfort '''

Further work to resolve issue [ticket:750]

''' Macro '''

Changed debug trace for running a macro to be announced at FINE level rather than INFO, should reduce log file size

''' CBUS '''

Ensure CBUS does not hang on IllegalStateException on device reconnect

''' HAL '''

Ensure HAL does not hang on IllegalStateException on device reconnect

== 4/May/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b94.zip V1.6-b94]  [attachment:wiki:SoftwareReleases:eLife-1.6b94-libs.zip Libs-V1.6b94] ==

''' Comfort '''

Added parameter name for analog poll timing;
both ANALOG_POLL_VALUE and ANALOGUE_POLL_VALUE can be used.
