@@ -3,8 +3,8 @@
          <!-- ______________________________________  Jandy DEFS  ____________________  -->
         <DEVICE ACTIVE="Y" DEVICE_TYPE="JANDY" DESCRIPTION="Jandy Pool controller">
                 <CONNECTION>
-                        <SERIAL ACTIVE="Y" PORT="/dev/tty.usbserial" SUPPORTS_CD="N" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="RTSCTS"/>
-                        <IP ACTIVE="N" IP_ADDRESS="127.0.0.1" PORT="5001"/>
+                        <SERIAL ACTIVE="N" PORT="/dev/tty.usbserial" SUPPORTS_CD="N" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="RTSCTS"/>
+                        <IP ACTIVE="Y" IP_ADDRESS="127.0.0.1" PORT="5001"/>
                         <IP ACTIVE="N" IP_ADDRESS="192.168.1.70" PORT="4999"/>
                 </CONNECTION>
                 
