@@ -1,4 +1,4 @@
-#Tue Jun 30 23:11:35 EST 2009
+#Fri Jul 10 16:41:49 EST 2009
 major_version=1.6b
-minor_version=97
+minor_version=99
 app_name=eLife
