@@ -1,3 +1,9 @@
+== 10/Jul/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b98.zip V1.6-b98]  ==
+
+''' Jandy '''
+
+Removed polling, more selective error reporting
+
 == 1/Jul/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b97.zip V1.6-b97]   [attachment:wiki:SoftwareReleases:eLife-1.6b97-libs.zip Libs-V1.6b97]  ==
 
 Resolved error messages when adding duplicate ALARM devices for the Comfort configuration. [ticket:753]
